force-app/main/default/objects/IDR_Email_Service_Setting__mdt/IDR_Email_Service_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Settings used in apex IDR email services</description>
    <label>IDR Email Service Setting</label>
    <pluralLabel>IDR Email Service Settings</pluralLabel>
</CustomObject>