force-app/main/default/objects/IDR_Email_Service_Setting__mdt/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Stores the technical email address</description>
    <inlineHelpText>Technical email address</inlineHelpText>
    <label>Email Address</label>
    <type>TextArea</type>
</CustomField>