force-app/main/default/objects/IDR_Email_Service_Setting__mdt/fields/Inbox_Address__c.field-meta.xml
<CustomField>
    <fullName>Inbox_Address__c</fullName>
    <description>ANZ inbox from where the forwarding rules have been setup, used in IDR apex email service</description>
    <label>Inbox Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>