force-app/main/default/objects/IDR_Email_Service_Setting__mdt/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>This field is used in IDR Email Service to assign case origin</description>
    <label>Origin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>